--- a/kube/smartbch-deployment.yml
+++ b/kube/smartbch-deployment.yml
@@ -31,7 +31,7 @@ spec:
             name: smartbch-data
         resources:
           requests:
-            memory: "1Gi"
+            memory: "512Mi"
         ports:
           - name: api
             containerPort: 8545
