--- a/kube/smartbch-wss-ingress.yml
+++ b/kube/smartbch-wss-ingress.yml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: smartbch-wss-ingress
@@ -13,14 +13,19 @@ spec:
   - hosts:
     - smartbch-wss.greyh.at
     secretName: smartbch-wss-tls
-  backend:
-    serviceName: smartbch
-    servicePort: 106
+  defaultBackend:
+    service:
+      name: smartbch
+      port:
+        number: 106
   rules:
   - host: smartbch-wss.greyh.at
     http:
       paths:
       - path: /
+        pathType: ImplementationSpecific
         backend:
-          serviceName: smartbch
-          servicePort: 106
+          service:
+            name: smartbch
+            port:
+              number: 106
