--- a/kube/smartbch-init-job.yml
+++ b/kube/smartbch-init-job.yml
@@ -9,8 +9,8 @@ spec:
     spec:
       containers:
       - name: smartbch-init
-        image: zquestz/smartbch:mainnet
-        command: ["./smartbchd", "init", "mynode", "--chain-id", "0x2710"]
+        image: smartbch/smartbchd:v0.4.7
+        command: ["smartbchd", "init", "mynode", "--chain-id", "0x2710"]
         volumeMounts:
           - name: smartbch-data
             mountPath: /root/.smartbchd
