--- a/kube/smartbch-ingress.yml
+++ b/kube/smartbch-ingress.yml
@@ -7,6 +7,8 @@ metadata:
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: '60'
+    nginx.ingress.kubernetes.io/proxy-send-timeout: '60'
 spec:
   tls:
   - hosts:
