Start command fix for syncing deployment

--- a/kube/smartbch-syncing-deployment.yml
+++ b/kube/smartbch-syncing-deployment.yml
@@ -28,7 +28,7 @@ spec:
         - --log_level=error
         - --no-bch-client
         command:
-        - ./smartbchd
+        - smartbchd
         image: smartbch/smartbchd:v0.6.1
         imagePullPolicy: Always
         name: smartbch
